Se realizo Ejercicio 3 (Navegacion) de HTML

--- a/Ejercicios-HTML/ej_noticia.html
+++ b/Ejercicios-HTML/ej_noticia.html
@@ -11,6 +11,9 @@
     <img src="imagenes/pinguino.jpg">
     <h1>Diario On-line</h1>
 </header>
+    <nav>
+        <a href="ej_listas.html"><h5><u>COCINA</u></h5> </a>
+    </nav>
 <section>
     <h3><b>CordoBici</b></h3>
 
