--- a/Ejercicios-HTML/ej_formulario.html
+++ b/Ejercicios-HTML/ej_formulario.html
@@ -33,7 +33,7 @@
     <label for="femenino">Femenino</label>
     <input type="radio" id="femenino" name="genero" value="femenino"/><br>
 
-    <!-- Como pedir un required al campo "SEXO", porque de la forma que se se lo deberia pedir a los 2 y la opcion es 1 -->
+    <!-- Como pedir un required al campo "SEXO", porque de la forma que se, se lo deberia pedir a los 2 y la opcion es 1 -->
 
     <label for="edad">Edad: &nbsp</label>
     <input type="number" id="edad" name="edad" min="1" max="100" step="1" required/><br>
@@ -52,7 +52,7 @@
     <label for="ccontrasena">Confirmar Password:&nbsp</label>
     <input type="text" size="30" id="ccontrasena" required><br>
 
-    <!-- Como controlar que las constrasenas sean iguales? -->
+    <!-- Como controlar que las contraseñas sean iguales? -->
 
     <h5>Tipo de Servicio:</h5>
     <input type="checkbox" id="free" name="servicio1" value="free" checked/>
