Se corrigio Type en email

--- a/Ejercicios-HTML/ej_formulario.html
+++ b/Ejercicios-HTML/ej_formulario.html
@@ -41,7 +41,7 @@
     <!-- Email con Dominio Valido, control? -->
 
     <label for="email">Email: &nbsp</label>
-    <input type="text" size="40" id="email"/><br>
+    <input type="email" size="40" id="email"/><br>
 
     <h5>Completa la informacion del usuario:</h5>
 
