--- a/Ejercicios-HTML/ej_formulario.html
+++ b/Ejercicios-HTML/ej_formulario.html
@@ -48,9 +48,9 @@
     <label for="usuario">Usuario:&nbsp</label>
     <input type="text" size="30" id="usuario" maxlenght="12" placeholder="Maximo 12 Caracteres" required><br>
     <label for="contrasena">Password:&nbsp</label>
-    <input type="text" size="30" id="contrasena" minlenght="8" placeholder="Minimo 8 Caracteres" required><br>
+    <input type="password" size="30" id="contrasena" minlenght="8" placeholder="Minimo 8 Caracteres" required><br>
     <label for="ccontrasena">Confirmar Password:&nbsp</label>
-    <input type="text" size="30" id="ccontrasena" required><br>
+    <input type="password" size="30" id="ccontrasena" required><br>
 
     <!-- Como controlar que las contraseñas sean iguales?  -->
 
@@ -73,6 +73,8 @@
 
     <input type="submit" value="ENVIAR"/>
     <input type="reset" value="BORRAR"/>
+
+    <!-- Como visualizamos las respuestas? -->
 
 </form>
 </body>
