Se realizaron algunas correcciones

--- a/Ejercicios-HTML/ej_formulario.html
+++ b/Ejercicios-HTML/ej_formulario.html
@@ -63,11 +63,11 @@
     <label for="premium">Premium</label><br><br>
 
     <label for="tema"><b>Tema:</b>&nbsp</label>
-    <select>
-        <option value="politica" id="tema">Politica</option>
-        <option value="negocios" id="tema">Negocios</option>
-        <option value="tecnologia" id="tema">Tecnologia</option>
-        <option value="salud" id="tema">Salud</option>
+    <select id="tema">
+        <option value="politica">Politica</option>
+        <option value="negocios">Negocios</option>
+        <option value="tecnologia">Tecnologia</option>
+        <option value="salud">Salud</option>
     </select><br><br>
     <textarea name="comentarios" rows="5" cols="60" placeholder="Escriba aqui sus comentarios."></textarea><br><br>
 
