--- a/Ejercicios-HTML/ej_tablas.html
+++ b/Ejercicios-HTML/ej_tablas.html
@@ -19,7 +19,7 @@
 <!-- Holaa Todos -->
 
 <table>
-
+    <caption>Congresos y Eventos</caption>
     <head>
         <th>Siglas</th>
         <th>Congreso o Evento</th>
