Estilos Incrustados y En Linea

--- a/Ejercicios-CSS/ej_columnas.html
+++ b/Ejercicios-CSS/ej_columnas.html
@@ -3,6 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Ejercicio Columnas</title>
+    <style>
+        #tituloPrincipal{
+            color: #1c21b3;
+        }
+        .tituloNoticia{
+            font-size: 30px;
+        }
+        body{
+            font-family: Tahoma;
+        }
+    </style>
 
 </head>
 <body>
