--- a/Ejercicios-JavaScript/primerWeb.html
+++ b/Ejercicios-JavaScript/primerWeb.html
@@ -6,8 +6,9 @@
     <link href="https://fonts.googleapis.com/css?family=Inknut+Antiqua" rel="stylesheet">
     <link href="miEstilo.css" type="text/css" rel="stylesheet">
     <script type="text/javascript" src="misFunciones.js"></script>
+
 </head>
-<body class="body-num" onload="alert('Hola Mundo')">
+<body class="body-num">
 
 <div class="centrado div-conver">
     <h1>Conversor de Unidades</h1>
@@ -15,16 +16,20 @@
         <p>
             <!--Label es incluido por cuestiones de Accesibilidad-->
             <!--Note que Label y el id del elemento poseen igual nombre-->
+
             <label for="distancia"> Distancia</label> = <input id="distancia" type="text" name="inp_distancia">
+
             <select name="unidades">
-                <option value="unid_metros">Metros</option>
-                <option value="unid_yardas">Yardas</option>
-                <option value="unid_pie">Pies</option>
-                <option value="unid_pulgadas">Pulgadas</option>
+                <option value="Metros">Metros</option>
+                <option value="Yardas">Yardas</option>
+                <option value="Pie">Pies</option>
+                <option value="Pulgadas">Pulgadas</option>
             </select>
-            <button>
-                Segunda Web!
+
+            <button onclick="cargarWeb()">
+                Segunda WEB
             </button>
+
         </p>
     </form>
 </div>
